--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,14 +12,15 @@ body {
     margin-bottom: 0.5rem;
 }
 
-canvas {
-    max-width: 100%;
-    height: auto !important;
+#chart {
     display: block;
+    width: 100% !important;
+    height: 100% !important;
 }
 
-#chart {
+.chart-container {
     position: relative;
-    width: 100% !important;
-    height: 300px !important;
+    width: 100%;
+    height: 300px;
+    min-height: 300px;
 }
