--- a/templates/index.html
+++ b/templates/index.html
@@ -57,14 +57,13 @@
                     </div>
                 </div>
 
-                <a href="/chart" class="btn btn-link">View Charts</a>
             </div>
 
             <div class="col-lg-7">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Live Data</h5>
-                        <div style="position: relative; width: 100%; height: 300px;">
+                        <div class="chart-container">
                             <canvas id="chart"></canvas>
                         </div>
                     </div>
@@ -72,9 +71,9 @@
             </div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="{{ url_for('static', filename='js/chart.js') }}"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
 </html>
