--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,7 @@
                     <li class="nav-item"><a class="nav-link active" href="/">Live Monitor</a></li>
                     <li class="nav-item"><a class="nav-link" href="/chart">Past Data</a></li>
                     <li class="nav-item"><a class="nav-link" href="/camera">Camera</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/triggers">Triggers</a></li>
                 </ul>
             </div>
         </div>
