--- a/templates/chart.html
+++ b/templates/chart.html
@@ -21,6 +21,7 @@
                     <li class="nav-item"><a class="nav-link" href="/">Live Monitor</a></li>
                     <li class="nav-item"><a class="nav-link active" href="/chart">Past Data</a></li>
                     <li class="nav-item"><a class="nav-link" href="/camera">Camera</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/triggers">Triggers</a></li>
                 </ul>
             </div>
         </div>
