--- a/templates/triggers.html
+++ b/templates/triggers.html
@@ -25,7 +25,7 @@
         </div>
     </nav>
     <div class="container py-4">
-        <h1 class="mb-4">Triggers</h1>
+           <!-- Removed redundant page title -->
         <div id="triggers-list" class="row g-3">
             <!-- Triggers will be loaded here -->
         </div>
