--- a/templates/camera.html
+++ b/templates/camera.html
@@ -277,6 +277,7 @@
                     <li class="nav-item"><a class="nav-link" href="/chart">Past Data</a></li>
                     <li class="nav-item"><a class="nav-link active" href="/camera">Camera</a></li>
                     <li class="nav-item"><a class="nav-link" href="/triggers">Triggers</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/manual">Manual Control</a></li>
                 </ul>
             </div>
         </div>
