--- a/templates/triggers.html
+++ b/templates/triggers.html
@@ -17,6 +17,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="/">Live Monitor</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/tv">TV Monitor</a></li>
                     <li class="nav-item"><a class="nav-link" href="/chart">Past Data</a></li>
                     <li class="nav-item"><a class="nav-link" href="/camera">Camera</a></li>
                     <li class="nav-item"><a class="nav-link active" href="/triggers">Triggers</a></li>
