--- a/templates/tv.html
+++ b/templates/tv.html
@@ -38,7 +38,7 @@
             <div class="tv-col">
                 <div class="tv-title">Current Readings</div>
                 <div class="tv-data" id="data">
-                    <p>Temperature: <strong id="temp">--</strong> °F</p>
+                    <p>Temperature: <strong id="temp">--</strong> &deg;F</p>
                     <p>Humidity: <strong id="humidity">--</strong> %</p>
                     <p>Soil Moisture A: <strong id="hyd_a">--</strong> %</p>
                     <p>Soil Moisture B: <strong id="hyd_b">--</strong> %</p>
